tests/unit/compile/cases/syntax-errors/08.doctype-sp-empty.t
<!DOCTYPE > text
---- THROW% ----
Unexpected ">"; expected: "'", '"' or <HtmlNameWord> near `> text` in `%s` at line 1
